--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -6,8 +6,85 @@ body {
   margin-bottom: 20px;
 }
 
-.channel-editor {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+.wrapper {
+  display: flex;
+  height: 100vh;
 }
+
+.nav {
+  flex-basis: 60px;
+  background-color: #DBDBDB;
+  padding: 10px;
+  img {
+    width: 50px;
+  }
+}
+
+.channels {
+  flex-basis: 200px;
+  background-color: #F4F4F4;
+}
+
+.chat-title,
+.channel-title {
+  font-weight: bolder;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+  height: 50px;
+}
+
+.channel-container {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 260px);
+  .channel-title {
+    border-bottom: 1px solid #eee;
+  }
+  .channel-content {
+    flex-grow: 1;
+    height: 100%;
+    overflow-y: scroll;
+    padding: 10px 30px 10px 30px;
+    .message {
+      .author {
+        font-weight: bolder;
+        font-size: 14px;
+      }
+      .date {
+        font-size: 12px;
+        color: #afafaf;
+        font-weight: bolder;
+      }
+    }
+  }
+  .channel-editor {
+    width: 100%;
+    height: 90px;
+    display: flex;
+    padding: 17px;
+    input {
+      width: 100%;
+      border-radius: 2px 0 0 2px;
+      border: 1px solid #bfbfbf;
+      padding: 10px;
+    }
+    input:focus {
+      outline: 1px solid black;
+    }
+    button {
+      padding: 10px 17px;
+      border-radius: 0 2px 2px 0;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
+      border: none;
+      background-color: #D23333;
+      color: white;
+      font-size: 14px;
+      font-weight: 600;
+    }
+  }
+}
+
+
+
