--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -23,6 +23,25 @@ body {
 .channels-wrapper {
   flex-basis: 200px;
   background-color: #F4F4F4;
+  .channels {
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    button {
+      border: none;
+      font-size: 15px;
+      background-color: transparent;
+      padding: 8px 0;
+      width: 100%;
+      text-align: left;
+      &:focus {
+        outline: none;
+      }
+      &.active {
+        font-weight: bolder;
+      }
+    }
+  }
 }
 
 .chat-title,
